# SciResearchKit

./: .gitignore  ETHICS.md  PUBLISHING.md  README.md  SKILL.md  srk_logo_preview.html
.github/workflows/: publish-pypi.yml  publish-vscode.yml
packaging/pypi/: LICENSE  README.md  hatch_build.py  pyproject.toml
packaging/pypi/src/sciresearchkit/: __init__.py  __main__.py
packaging/pypi/tests/: test_bundle.py
packaging/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
packaging/vscode/scripts/: sync-content.js
packaging/vscode/src/: extension.ts
references/: analysis-and-results.md  citations.md  claims-and-language.md  grants-and-proposals.md  literature-review.md  manuscript-review.md  methods-and-statistics.md  paper-writing.md  peer-review.md  portability.md  reporting-standards.md  research-design.md  venue-standards.md  writing-style.md
templates/: imrad-paper.md  preregistration.md  response-to-reviewers.md  specific-aims.md
